[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Force compatible versions at workspace level
# [patch.crates-io]
# solana-program = "1.17.17"
# solana-pubkey = "1.17.17"
